[gd_scene load_steps=3 format=3 uid="uid://rec4fik43muc"]

[ext_resource type="Script" path="res://app/game_screen/blackboard/blackboard.gd" id="1_i6mxe"]
[ext_resource type="Theme" uid="uid://bvysw3gfc4ply" path="res://assets/text_theme.tres" id="2_tx2cj"]

[node name="Blackboard" type="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_i6mxe")

[node name="TextField" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("2_tx2cj")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
placeholder_text = "WORDSSSSSS"
alignment = 3
max_length = 9
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="WordList" type="ItemList" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_tx2cj")

[connection signal="text_changed" from="TextField" to="." method="_on_text_field_text_changed"]
[connection signal="text_submitted" from="TextField" to="." method="_on_text_submitted"]
